--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "sass": "^1.77.2",
     "three": "0.153.0",
+    "three-stdlib": "^2.30.4",
     "valtio": "^1.13.2",
     "vite-plugin-glsl": "^1.3.0",
     "vite-tsconfig-paths": "^4.3.2"
